CSS/index.css
@import url('https://fonts.googleapis.com/css2?family=Jost:wght@700&family=Tilt+Neon&display=swap');
@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap');
/*Keyframes*/
@keyframes fade-up {
  0% {
    opacity: 0;
    transform: translateY(30px) scale(0.9);
  }
}
html {
  font-size: 18px;
}
body {
    margin: 0px;
    background-color: black;
    display:flex;
    flex-direction: column;
    font-family: 'PT Sans Narrow', sans-serif;
}


/* -----------------HERO------------------------------------------------------------------------*/

.hero {
    vertical-align: middle;
    height: 630px;
    object-fit:cover;
  }


  
  /* Slideshow container */
  .slideshow-container {
    overflow:hidden;
    width:100%;
    position: relative;
    display: inline-block;
    margin: auto;
  }
  
  /* Caption text */
  .text {
    color: white;
    font-family:'Tilt Neon', sans-serif;
    font-size: 20px;
    padding: 25px;
    position: absolute;
    margin-top: -400px;
    width: 100%;
    text-align: left;
    margin-left:800px;

  }
  
  /* The dots/bullets/indicators */
  .dot {
    cursor: pointer;
    height: 10px;
    width: 10px;
    margin: 0 2px;
    background-color: rgb(255, 255, 255, 0.5);
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
  }
  
  .activem, .dot:hover{
    background-color: #eb19b0;
  }
  
  .slide {
    position: absolute;
    text-align: center;
    left: 0;
    right: 0;
    margin-top: -40px;
  }
  
  /* Fading animation */
  .fade {
    animation-name: fade;
    animation-duration: 1.5s;
  }
  
  .hero__button:hover {
    background-color: #eb19b0;
  }
  
  @keyframes fade {
    from {opacity: .5} 
    to {opacity: 1}
  }
  
  .text {
    margin-left:190px;
    margin-bottom:0px;
    animation: fade-up 1s;
  }
  p {
    font-size:18px;
    margin:0px;
  }
  h2 {
    margin-top:10px;
    margin-bottom:10px;
  }
  a {
    margin-left:0;
    margin-right:5px;
  }

  .slideshow-container h2, .hero-link--text {
    text-shadow: 0 0 5px #FF0000, 0 0 7px #0000FF;
    letter-spacing: 3px; 
  }
  .hero__img--button {
    height: 18px; 
    display: inline-block;
    margin-left: 6px;
    margin-right: 5px;
  }
  
  .hero-link--text {
    font-size: smaller;
    display:table-cell;
    vertical-align:middle;
    line-height: 1rem;
  }

  .button__flex {
    margin-top: 1.8vh;
    display: flex;
    width: fit-content;
    gap: 0.7vw;
  }
  .hero__button {
    display: table;
    width: fit-content;
    text-decoration: none;
    cursor: pointer;
    border-style: solid;
    border-radius: 100000px;
    background-color: rgba(27, 27, 27, 0.6);
    color: white;
    transition: all .5s ease;
    padding: 4px;
    line-height: 1rem;

  }

  .vidhero {
    display:none;
    height: 100vh;
    width: 100%;
  }
  #myVideo {
    right: 0;
    bottom: 0;
    min-width: 100%;
    max-width: 100%;
    max-height: 100%;
    object-fit: cover;
  
  }

/* -----------------Instagram Widget------------------------------------------------------------------------*/
.Instagram-widget {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  margin: 0;  

}

.Instagram-widget h2 {
  color: white;
  margin: 50px;
}

/* -----------------About us------------------------------------------------------------------------*/
.aboutus {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 78.78vh;
  width: 100%;
  color: white;
  gap: 1.125rem;
}

.aboutus p {
  font-size: .5rem;
}

.aboutus div {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin: 0%;
  width: 100%;
  height: 200px;
  gap: 6.25rem;

}

.aboutus img {
  max-height: 75%;
  max-width: 75%;
  overflow: hidden;
  margin: 0%;
}

.aboutus h1, .Instagram-widget h1, .Upcoming-Events h1 {
  font-size: 4.375rem;
  letter-spacing: 5px;
  text-shadow: 0 0 5px #FF0000, 0 0 7px #0000FF;
  color: white;
}

.aboutus h1 {
  text-align: center;
}

.aboutus p {
  letter-spacing: 0.094rem;
  font-size: 1.125rem;
  line-height: 1.875rem;
  width:38.75rem;
  
}



/* -----------------Upcoming Events------------------------------------------------------------------------*/
.Upcoming-Events {
  height: 650px;
  display: flex;
  flex-direction: column;
  margin-left: 30px;
  margin-right: 30px;
  margin-bottom: 20vh;
}

.Upcoming-Events h1 {
  margin-bottom: 5vh;
}

.event-container{
  display:flex;
  justify-content: flex-start;
  flex-wrap: wrap;
}

.event-container p {
  margin-left: .5rem;
  color: whitesmoke;
  font-weight: 600;
  letter-spacing: 2px;
}

.event-container .date {
  margin-bottom: 1rem;
  font-size: .8rem;
}

.event-container .title {
  font-size: 1.2rem;
}


.event-container .card {
  display: flex;
  flex-direction: column;
  background: #1b1b1b;
  width: 230px;
  height: 480px;
  margin: 10px;
  border-radius: 5px;
}

.butts {
  display:flex;
  justify-content: space-around;
}

.card-image {
  background-color: #0000FF;
  height: 400px;
  margin-bottom: 15px;
  border-radius: 5px 5px 0 0;
  background-size:cover;
}

.card-1 {
  background-position: center center;
  background-image: url(../Images/losmoween.jpg);
}

.card-2 {
  background-position: 75% 10% ;
  background-image: url(../Images/midnights.PNG);
}

.card-3 {
  background-position: center center;
  background-image: url(../Images/netflix.jpg);
}

.event-container .card h1 {
  padding: 10px;
}

.event-container .card p {
  margin-left: 12px;
}

.event-container .card a {
  display: flex;
  justify-content: center;
  align-items: center;
  background: transparent;
  text-align: center;
  display:block;
  text-decoration: none;
  padding: 5px;
  font-size: 13px;
  margin-top: 20px;
  width:80px;
  height: 20px;
  border-radius: .3rem;
  font-weight: bold;
  letter-spacing: 1.5px;
}
/* ... */

